--- a/Calculatrice/index.html
+++ b/Calculatrice/index.html
@@ -8,47 +8,47 @@
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body ng-app="myApp" ng-controller="myCtrl">
+  <body ng-app="myApp" ng-controller="ButtonCtrl as button">
     <div class="container">
        <div class="well">
        <p id="title">スーパー電卓</p>
-       <p id="memo">>>{{chiffre1}}{{operation}}</p>
-        <h1><input type="text" value="{{chiffre_temp}}" id="resultat"></h1>
+       <p id="memo">>>{{button.chiffre1}}{{button.operation}}</p>
+        <h1><input type="text" value="{{button.chiffre_temp}}" id="resultat"></h1>
           <table>
-          <tr>2000 brut + 100
-              <td><button class="btn btn-lg btn-info" ng-click="effacer()"> CE </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="effacer_tout()"> C </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="retour()"> < </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="division()"> / </button></td>
+          <tr>
+              <td><button class="btn btn-lg btn-info" ng-click="button.effacer()"> CE </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.effacer_tout()"> C </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.retour()"> < </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.division()"> / </button></td>
             </tr>
             <tr>
-              <td><button class="btn btn-lg btn-info" ng-click="sept()"> 7 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="huit()"> 8 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="neuf()"> 9 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="multiplication()"> * </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.sept()"> 7 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.huit()"> 8 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.neuf()"> 9 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.multiplication()"> * </button></td>
             </tr>
             <tr>
-              <td><button class="btn btn-lg btn-info" ng-click="quatre()"> 4 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="cinq()"> 5 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="six()"> 6 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="soustraction()"> - </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.quatre()"> 4 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.cinq()"> 5 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.six()"> 6 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.soustraction()"> - </button></td>
             </tr>
             <tr>
-              <td><button class="btn btn-lg btn-info" ng-click="un()"> 1 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="deux()"> 2 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="trois()"> 3 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="addition()"> + </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.un()"> 1 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.deux()"> 2 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.trois()"> 3 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.addition()"> + </button></td>
             </tr>
             <tr>
-              <td><button class="btn btn-lg btn-info" ng-click="moins()"> - </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="zero()"> 0 </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="virgule()"> , </button></td>
-              <td><button class="btn btn-lg btn-info" ng-click="egale()"> = </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.moins()"> - </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.zero()"> 0 </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.virgule()"> , </button></td>
+              <td><button class="btn btn-lg btn-info" ng-click="button.egale()"> = </button></td>
             </tr>
           </table>
        </div> 
     </div>    
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </html>
